# ZAPPY

./: Makefile  README.md  zappy_server
IA/: Makefile  main.py
IA/Doc/: State_ai_zappy.drawio
IA/IA/: Elevation.py  ia.py
IA/Log/: ai_print.py
IA/Parser/: parser.py
IA/Socket/: Answer.py  protocol.py  socket.py
IA/Socket/Answers/: Dead.py  Evolution.py  OkKo.py  Value.py
IA/StateMachine/: StateMachine.py
IA/StateMachine/StateList/: Elevation.py  Fork.py  GoForward.py  GoLeft.py  GoRight.py  Group.py  Search.py  SearchStone.py  Visit.py
gui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
gui/include/: Game.hpp  NetworkManager.hpp  Renderer.hpp  Utils.hpp
gui/include/Parser/: Parser.hpp
gui/src/: Game.cpp  NetworkManager.cpp  Renderer.cpp  main.cpp
gui/src/Errors/: Errors.cpp  Errors.hpp
gui/src/Parser/: Parser.cpp
server/: Makefile  Readme.md  main.c
server/include/: server.h
server/server/: add_ressource.c  clean_str.c  get_next_line.c  handle_client_command.c  handle_clients.c  handle_command_graphic.c  handle_command_ia.c  init_arg.c  init_client.c  init_server.c  s_command_utils.c  start_command.c  start_server.c
server/server/command_gui/: command_broadcast.c  command_content_of_a_tile.c  command_end_incantation.c  command_expulsion.c  command_incantation.c  command_map_content.c  command_map_size.c  command_name_teams.c  command_new_player.c  command_player_inventory.c  command_player_level.c  command_player_position.c  command_time_modification.c  command_time_request.c
server/server/command_ia/: broadcast.c  (+9 more)
(+10 files in other folders)
